--- a/belis-app/Main.storyboard
+++ b/belis-app/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -20,8 +20,8 @@
                             <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="belisBack.png" translatesAutoresizingMaskIntoConstraints="NO" id="PbO-3Z-iyw">
                                 <rect key="frame" x="-4" y="-20" width="608" height="640"/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="testUser@BELIS" borderStyle="roundedRect" placeholder="Benutzername" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWa-3o-BRn">
-                                <rect key="frame" x="237" y="220" width="127" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Benutzername" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWa-3o-BRn">
+                                <rect key="frame" x="225" y="220" width="152" height="30"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="E4y-pN-mzh"/>
@@ -64,7 +64,7 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="*********" borderStyle="roundedRect" placeholder="Passwort" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLg-aa-Xjn">
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Passwort" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLg-aa-Xjn">
                                 <rect key="frame" x="261" y="260" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="194" id="JEQ-oI-nvb"/>
@@ -152,6 +152,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="txtLogin" destination="hWa-3o-BRn" id="a2K-e5-PNB"/>
+                        <outlet property="txtPass" destination="jLg-aa-Xjn" id="vaX-x6-hBD"/>
                         <outlet property="view" destination="8bC-Xf-vdC" id="fV0-ZS-i4e"/>
                     </connections>
                 </viewController>
@@ -171,63 +173,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wda-ui-DdU" userLabel="TopToolbar">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="8zs-TB-ivE"/>
-                                </constraints>
-                                <items>
-                                    <barButtonItem systemItem="search" id="CX5-Mc-5W0">
-                                        <connections>
-                                            <action selector="searchButtonTabbed:" destination="Kou-sk-bUr" id="1rx-H1-gZ7"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="n6E-Oa-EdL"/>
-                                    <barButtonItem title="Suche nach" id="yoK-c2-Vd0">
-                                        <connections>
-                                            <segue destination="mNo-PQ-ieb" kind="popoverPresentation" identifier="showSearchSelectionPopover" popoverAnchorBarButtonItem="yoK-c2-Vd0" id="x7L-3E-u7R">
-                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                            </segue>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LYr-cg-vAH"/>
-                                    <barButtonItem systemItem="bookmarks" id="CYg-ry-sRN">
-                                        <connections>
-                                            <action selector="lookUpButtonTabbed:" destination="Kou-sk-bUr" id="Dvx-ij-MTN"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="vw7-N7-tu1"/>
-                                    <barButtonItem systemItem="search" id="5Kb-7L-5AP">
-                                        <connections>
-                                            <action selector="geoSearchButtonTabbed:" destination="Kou-sk-bUr" id="W55-Bo-Sj9"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" id="hZb-wC-ZDc">
-                                        <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Straße" minimumFontSize="17" clearButtonMode="unlessEditing" id="FwD-0Q-xQY">
-                                            <rect key="frame" x="434" y="7" width="151" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <attributedString key="attributedText"/>
-                                            <textInputTraits key="textInputTraits"/>
-                                            <variation key="heightClass=regular-widthClass=regular">
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            </variation>
-                                            <connections>
-                                                <action selector="geoSearchInputDidEnd:" destination="Kou-sk-bUr" eventType="editingDidEnd" id="er5-kF-yUz"/>
-                                            </connections>
-                                        </textField>
-                                    </barButtonItem>
-                                </items>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="8zs-TB-ivE"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=regular">
-                                    <mask key="constraints">
-                                        <include reference="8zs-TB-ivE"/>
-                                    </mask>
-                                </variation>
-                            </toolbar>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" mapType="standard" pitchEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fWn-J2-ozd">
                                 <rect key="frame" x="200" y="44" width="400" height="556"/>
                                 <gestureRecognizers/>
@@ -323,6 +268,63 @@
                                         </segmentedControl>
                                     </barButtonItem>
                                 </items>
+                            </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wda-ui-DdU" userLabel="TopToolbar">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="8zs-TB-ivE"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="search" id="CX5-Mc-5W0">
+                                        <connections>
+                                            <action selector="searchButtonTabbed:" destination="Kou-sk-bUr" id="1rx-H1-gZ7"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="n6E-Oa-EdL"/>
+                                    <barButtonItem title="Suche nach" id="yoK-c2-Vd0">
+                                        <connections>
+                                            <segue destination="mNo-PQ-ieb" kind="popoverPresentation" identifier="showSearchSelectionPopover" popoverAnchorBarButtonItem="yoK-c2-Vd0" id="x7L-3E-u7R">
+                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                            </segue>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LYr-cg-vAH"/>
+                                    <barButtonItem systemItem="bookmarks" id="CYg-ry-sRN">
+                                        <connections>
+                                            <action selector="lookUpButtonTabbed:" destination="Kou-sk-bUr" id="Dvx-ij-MTN"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="vw7-N7-tu1"/>
+                                    <barButtonItem systemItem="search" id="5Kb-7L-5AP">
+                                        <connections>
+                                            <action selector="geoSearchButtonTabbed:" destination="Kou-sk-bUr" id="W55-Bo-Sj9"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" id="hZb-wC-ZDc">
+                                        <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Straße" minimumFontSize="17" clearButtonMode="unlessEditing" id="FwD-0Q-xQY">
+                                            <rect key="frame" x="434" y="7" width="151" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <attributedString key="attributedText"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                            <variation key="heightClass=regular-widthClass=regular">
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            </variation>
+                                            <connections>
+                                                <action selector="geoSearchInputDidEnd:" destination="Kou-sk-bUr" eventType="editingDidEnd" id="er5-kF-yUz"/>
+                                            </connections>
+                                        </textField>
+                                    </barButtonItem>
+                                </items>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="8zs-TB-ivE"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <mask key="constraints">
+                                        <include reference="8zs-TB-ivE"/>
+                                    </mask>
+                                </variation>
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
