--- a/belis-app/table-cell-guis/MemoTitledInfoCell.xib
+++ b/belis-app/table-cell-guis/MemoTitledInfoCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -23,21 +23,22 @@
                         <color key="textColor" red="0.16078431369999999" green="0.45098039220000002" blue="0.82745098039999998" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fKA-nq-Xol">
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qM9-Zk-P2c">
+                        <rect key="frame" x="8" y="33" width="295" height="61"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="rWz-HE-ZW2" firstAttribute="leading" secondItem="fKA-nq-Xol" secondAttribute="leading" id="44C-3l-och"/>
-                    <constraint firstItem="fKA-nq-Xol" firstAttribute="top" secondItem="rWz-HE-ZW2" secondAttribute="bottom" constant="10" id="8UX-PK-SiL"/>
                     <constraint firstItem="rWz-HE-ZW2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="9OB-1Q-G9M"/>
                     <constraint firstItem="rWz-HE-ZW2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="BXs-is-9ic"/>
                     <constraint firstAttribute="trailingMargin" secondItem="rWz-HE-ZW2" secondAttribute="trailing" constant="-3" id="R1T-hn-uOF"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="lblData" destination="qM9-Zk-P2c" id="gmc-PO-DQ6"/>
                 <outlet property="lblTitle" destination="rWz-HE-ZW2" id="TfH-Cd-hND"/>
             </connections>
             <point key="canvasLocation" x="69.5" y="53.5"/>
