--- a/belis-app/Main.storyboard
+++ b/belis-app/Main.storyboard
@@ -723,10 +723,10 @@
             </objects>
             <point key="canvasLocation" x="54" y="-152.5"/>
         </scene>
-        <!--rtz-->
+        <!--GenericFormView-->
         <scene sceneID="vtU-0A-ZA8">
             <objects>
-                <tableViewController storyboardIdentifier="protDetails" title="rtz" modalPresentationStyle="pageSheet" id="C4c-SF-r80" customClass="GenericFormViewController" customModule="belis_app" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="formView" title="rtz" modalPresentationStyle="pageSheet" id="C4c-SF-r80" userLabel="GenericFormView" customClass="GenericFormViewController" customModule="belis_app" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="096-HN-LJp">
                         <rect key="frame" x="0.0" y="0.0" width="400" height="500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
